--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/color.xml
@@ -36,8 +36,8 @@
     <color name="black_translucent_level_3">#e536363f</color>
 
     <color name="sliding_bottom_bg_color">#F7F7F7</color>
-    <color name="theme_color">#FD7945</color>
-    <color name="document_text_color">#f79042</color>
+    <!--<color name="theme_color">#FD7945</color>
+    <color name="document_text_color">#f79042</color>-->
 
     <color name="black_text_grey">#4C4C4C</color>
     <color name="leaderboard_activity_text_color">#9D9D9D</color>
@@ -67,7 +67,7 @@
     <color name="grey_btn_pressed">#7E7E7E</color>
     <color name="new_orange_pressed">#F8A654</color>
     <color name="white_little_dark">#F8F8F8</color>
-    <color name="new_orange">#ff8162</color>
+   <!-- <color name="new_orange">#ff8162</color>-->
     <color name="new_orange1">#F6853A</color>
     <color name="menu_black_pressed">#97918D</color>
     <color name="new_orange_path">#F8A654</color>
@@ -87,7 +87,7 @@
     <color name="favorite_div">#97989C</color>
 
     <color name="yellow_jugnoo">#FAA31C</color>
-    <color name="musturd_jugnoo">#FFAC00</color>
+   <!-- <color name="musturd_jugnoo">#FFAC00</color>-->
     <color name="status_pending">#f5a623</color>
     <color name="grey_leader">#54585d</color>
     <color name="blue_leader">#4cc1d2</color>
@@ -98,8 +98,8 @@
     <color name="red_status">#F53C37</color>
     <color name="red_ticket_status">#d0021b</color>
     <color name="red_status_v2">#eb5635</color>
-    <color name="red_v2">#ff8162</color>
-    <color name="red_v2_fadded">#ffc2b3</color>
+    <!--<color name="red_v2">#ff8162</color>-->
+    <!--<color name="red_v2_fadded">#ffc2b3</color>-->
 
     <color name="orange_text">#FBBC12</color>
 
