--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/values/styles.xml
@@ -102,4 +102,17 @@
     </style>
 
 
+    <style name="ButtonOrange" parent="@android:style/Widget.Button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:minWidth">116dp</item>
+        <item name="android:minHeight">46dp</item>
+        <item name="android:background">@drawable/orange_btn_selector</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">17sp</item>
+        <item name="android:textAllCaps">true</item>
+        <item name="android:tag">@string/dont_touch_me</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
 </resources>
