feat_credits: UI Fixes

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_current_details.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_current_details.xml
@@ -9,6 +9,7 @@
     <RelativeLayout
         android:layout_marginBottom="1dp"
         android:padding="8dp"
+        android:background="@android:color/white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -71,6 +72,7 @@
         android:id="@+id/tv_earn_credits"
         android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
         android:padding="10dp"
+        android:layout_marginBottom="1dp"
         android:text="@string/earn_more_credits"
         android:background="@drawable/bg_white_grey_light_selector"
         android:layout_width="match_parent"
