--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_credits_home.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_credits_home.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:background="@color/grey_light_alpha"
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -9,14 +10,15 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/tabs"
         android:layout_width="match_parent"
-        android:layout_height="90px"
+        android:layout_height="45dp"
         android:visibility="visible"
-        app:pstsIndicatorHeight="7px"
+        app:pstsIndicatorHeight="4dp"
         app:pstsDividerColor="@color/menu_black"
         app:pstsShouldExpand="true"
-        app:pstsUnderlineColor="@color/white"
-        app:pstsUnderlineHeight="2px"
-        />
+        app:pstsUnderlineHeight="1dp"
+        app:pstsUnderlineColor="@color/white"/>
+
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/viewPager"
