--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
@@ -2,6 +2,7 @@
 <LinearLayout android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/grey_light_alpha"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
@@ -11,7 +12,10 @@
         android:id="@+id/tv_refer_driver"
         android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
         android:padding="10dp"
+        android:background="@drawable/bg_white_grey_light_selector"
         android:layout_marginBottom="1dp"
+        android:textSize="17sp"
+        android:textColor="@color/text_color"
         android:text="@string/refer_a_driver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -19,8 +23,11 @@
     <TextView
         android:id="@+id/tv_refer_customer"
         android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
+        android:background="@drawable/bg_white_grey_light_selector"
         android:padding="10dp"
         android:layout_marginBottom="1dp"
+        android:textSize="17sp"
+        android:textColor="@color/text_color"
         android:text="@string/refer_a_customer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -29,7 +36,10 @@
     <TextView
         android:id="@+id/tv_advertise_us"
         android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
+        android:background="@drawable/bg_white_grey_light_selector"
         android:padding="10dp"
+        android:textSize="17sp"
+        android:textColor="@color/text_color"
         android:text="@string/advertise_for_us"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
