feat_credits: Documents activity linked

--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -719,7 +719,7 @@
                     android:tag="mwar"/>
 
                 <TextView
-                    android:id="@+id/tvdriverCredits"
+                    android:id="@+id/tvDriverCredits"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
