--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
@@ -42,7 +42,20 @@
         android:textColor="@color/text_color"
         android:text="@string/advertise_for_us"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp" />
+
+    <TextView
+        android:id="@+id/tv_get_credits"
+        android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
+        android:background="@drawable/bg_white_grey_light_selector"
+        android:padding="10dp"
+        android:textSize="17sp"
+        android:textColor="@color/text_color"
+        android:text="@string/get_credits"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp" />
 
 
 
