--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_earn_credits.xml
@@ -4,58 +4,60 @@
     android:orientation="vertical"
     android:background="@color/grey_light_alpha"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llRoot"
+    >
 
 
 
-    <TextView
-        android:id="@+id/tv_refer_driver"
-        android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
-        android:padding="10dp"
-        android:background="@drawable/bg_white_grey_light_selector"
-        android:layout_marginBottom="1dp"
-        android:textSize="17sp"
-        android:textColor="@color/text_color"
-        android:text="@string/refer_a_driver"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <!--<TextView-->
+        <!--android:id="@+id/tv_refer_driver"-->
+        <!--android:drawableEnd="@drawable/ic_hippo_support_right_arrow"-->
+        <!--android:padding="10dp"-->
+        <!--android:background="@drawable/bg_white_grey_light_selector"-->
+        <!--android:layout_marginBottom="1dp"-->
+        <!--android:textSize="17sp"-->
+        <!--android:textColor="@color/text_color"-->
+        <!--android:text="@string/refer_a_driver"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
 
-    <TextView
-        android:id="@+id/tv_refer_customer"
-        android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
-        android:background="@drawable/bg_white_grey_light_selector"
-        android:padding="10dp"
-        android:layout_marginBottom="1dp"
-        android:textSize="17sp"
-        android:textColor="@color/text_color"
-        android:text="@string/refer_a_customer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    <!--<TextView-->
+        <!--android:id="@+id/tv_refer_customer"-->
+        <!--android:drawableEnd="@drawable/ic_hippo_support_right_arrow"-->
+        <!--android:background="@drawable/bg_white_grey_light_selector"-->
+        <!--android:padding="10dp"-->
+        <!--android:layout_marginBottom="1dp"-->
+        <!--android:textSize="17sp"-->
+        <!--android:textColor="@color/text_color"-->
+        <!--android:text="@string/refer_a_customer"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content" />-->
 
 
-    <TextView
-        android:id="@+id/tv_advertise_us"
-        android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
-        android:background="@drawable/bg_white_grey_light_selector"
-        android:padding="10dp"
-        android:textSize="17sp"
-        android:textColor="@color/text_color"
-        android:text="@string/advertise_for_us"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp" />
+    <!--<TextView-->
+        <!--android:id="@+id/tv_advertise_us"-->
+        <!--android:drawableEnd="@drawable/ic_hippo_support_right_arrow"-->
+        <!--android:background="@drawable/bg_white_grey_light_selector"-->
+        <!--android:padding="10dp"-->
+        <!--android:textSize="17sp"-->
+        <!--android:textColor="@color/text_color"-->
+        <!--android:text="@string/advertise_for_us"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="1dp" />-->
 
-    <TextView
-        android:id="@+id/tv_get_credits"
-        android:drawableEnd="@drawable/ic_hippo_support_right_arrow"
-        android:background="@drawable/bg_white_grey_light_selector"
-        android:padding="10dp"
-        android:textSize="17sp"
-        android:textColor="@color/text_color"
-        android:text="@string/get_credits"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="1dp" />
+    <!--<TextView-->
+        <!--android:id="@+id/tv_get_credits"-->
+        <!--android:drawableEnd="@drawable/ic_hippo_support_right_arrow"-->
+        <!--android:background="@drawable/bg_white_grey_light_selector"-->
+        <!--android:padding="10dp"-->
+        <!--android:textSize="17sp"-->
+        <!--android:textColor="@color/text_color"-->
+        <!--android:text="@string/get_credits"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_marginBottom="1dp" />-->
 
 
 
