--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/layout_driver_menu.xml
@@ -125,6 +125,15 @@
                         </RelativeLayout>
 
 
+                        <TextView
+                            android:id="@+id/tvCredits"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/NA"
+                            android:visibility="gone"
+                            android:textColor="@color/white"
+                            android:textSize="30px"/>
+
                     </LinearLayout>
                 </LinearLayout>
 
