--- a/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
+++ b/JugnooNewDriver/jugnooNewDriver/src/main/res/layout/fragment_share_earn.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="485px"
                     android:layout_centerHorizontal="true"
-                    android:background="@drawable/graphic_refer"
+                    android:src="@drawable/graphic_refer"
                     android:tag="mwar"
                     android:visibility="visible"/>
 
